[project]
name = "hitblow"
version = "0.1.0"
description = "チームで育てる Hit & Blow ゲーム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hitblow = "hitblow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hitblow"]

[dependency-groups]
dev = ["pytest>=8"]
